tests/baselines/reference/stringLiteralTypeIsSubtypeOfString.errors.txt
stringLiteralTypeIsSubtypeOfString.ts(43,26): error TS2322: Type 'null' is not assignable to type 'string'.
stringLiteralTypeIsSubtypeOfString.ts(44,35): error TS2322: Type 'null' is not assignable to type 'string'.
stringLiteralTypeIsSubtypeOfString.ts(45,41): error TS2322: Type 'null' is not assignable to type 'number'.
stringLiteralTypeIsSubtypeOfString.ts(46,44): error TS2322: Type 'null' is not assignable to type 'string'.
stringLiteralTypeIsSubtypeOfString.ts(47,64): error TS2322: Type 'null' is not assignable to type 'number'.
stringLiteralTypeIsSubtypeOfString.ts(48,68): error TS2322: Type 'null' is not assignable to type 'number'.
stringLiteralTypeIsSubtypeOfString.ts(49,43): error TS2322: Type 'null' is not assignable to type 'number'.
stringLiteralTypeIsSubtypeOfString.ts(50,44): error TS2322: Type 'null' is not assignable to type 'RegExpMatchArray'.
stringLiteralTypeIsSubtypeOfString.ts(51,60): error TS2322: Type 'null' is not assignable to type 'string'.
stringLiteralTypeIsSubtypeOfString.ts(52,35): error TS2322: Type 'null' is not assignable to type 'number'.
stringLiteralTypeIsSubtypeOfString.ts(53,51): error TS2322: Type 'null' is not assignable to type 'string'.
stringLiteralTypeIsSubtypeOfString.ts(54,55): error TS2322: Type 'null' is not assignable to type 'string[]'.
stringLiteralTypeIsSubtypeOfString.ts(55,54): error TS2322: Type 'null' is not assignable to type 'string'.
stringLiteralTypeIsSubtypeOfString.ts(56,29): error TS2322: Type 'null' is not assignable to type 'string'.
stringLiteralTypeIsSubtypeOfString.ts(57,35): error TS2322: Type 'null' is not assignable to type 'string'.
stringLiteralTypeIsSubtypeOfString.ts(58,29): error TS2322: Type 'null' is not assignable to type 'string'.
stringLiteralTypeIsSubtypeOfString.ts(59,35): error TS2322: Type 'null' is not assignable to type 'string'.
stringLiteralTypeIsSubtypeOfString.ts(60,22): error TS2322: Type 'null' is not assignable to type 'string'.
stringLiteralTypeIsSubtypeOfString.ts(62,53): error TS2322: Type 'null' is not assignable to type 'string'.
stringLiteralTypeIsSubtypeOfString.ts(63,25): error TS2322: Type 'null' is not assignable to type 'string'.


==== stringLiteralTypeIsSubtypeOfString.ts (20 errors) ====
    // string literal types are subtypes of string, any
    
    // ok
    function f1(x: 'a');
    function f1(x: string);
    function f1(x: string) { }
    
    // ok
    function f2(x: 'a');
    function f2(x: any);
    function f2(x: any) { }
    
    // errors
    function f3(x: 'a');
    function f3(x: Object);
    function f3(x: any) { }
    
    function f4(x: 'a');
    function f4(x: {});
    function f4(x: any) { }
    
    function f5(x: 'a');
    function f5(x: number);
    function f5(x: any) { }
    
    function f6(x: 'a');
    function f6(x: boolean);
    function f6(x: any) { }
    
    function f7(x: 'a');
    function f7(x: Date);
    function f7(x: any) { }
    
    function f8(x: 'a');
    function f8(x: RegExp);
    function f8(x: any) { }
    
    function f9(x: 'a');
    function f9(x: () => {});
    function f9(x: any) { }
    
    class C implements String {
        toString(): string { return null; }
                             ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        charAt(pos: number): string { return null; }
                                      ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        charCodeAt(index: number): number { return null; }
                                            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'number'.
        concat(...strings: string[]): string { return null; }
                                               ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        indexOf(searchString: string, position?: number): number { return null; }
                                                                   ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'number'.
        lastIndexOf(searchString: string, position?: number): number { return null; }
                                                                       ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'number'.
        localeCompare(that: string): number { return null; }
                                              ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'number'.
        match(regexp: any): RegExpMatchArray { return null; }
                                               ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'RegExpMatchArray'.
        replace(searchValue: any, replaceValue: any): string { return null; }
                                                               ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        search(regexp: any): number { return null; }
                                      ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'number'.
        slice(start?: number, end?: number): string { return null; }
                                                      ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        split(separator: any, limit?: number): string[] { return null; }
                                                          ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string[]'.
        substring(start: number, end?: number): string { return null; }
                                                         ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        toLowerCase(): string { return null; }
                                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        toLocaleLowerCase(): string { return null; }
                                      ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        toUpperCase(): string { return null; }
                                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        toLocaleUpperCase(): string { return null; }
                                      ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        trim(): string { return null; }
                         ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        length: number;
        substr(from: number, length?: number): string { return null; }
                                                        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        valueOf(): string { return null; }
                            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        [index: number]: string;
    }
    
    // BUG 831846
    function f10(x: 'a');
    function f10(x: C);
    function f10(x: any) { }
    
    interface I extends String {
        foo: string;
    }
    
    // BUG 831846
    function f11(x: 'a');
    function f11(x: I);
    function f11(x: any) { }
    
    function f12<T>(x: 'a');
    function f12<T>(x: T);
    function f12<T>(x: any) { }
    
    function f13<T extends String>(x: 'a');
    function f13<T extends String>(x: T);
    function f13<T extends String>(x: any) { }
    
    enum E { A }
    function f14(x: 'a');
    function f14(x: E);
    function f14(x: any) { }
    
    function f15<T, U extends T>(x: 'a');
    function f15<T, U extends T>(x: U);
    function f15<T, U extends T>(x: any) { }
    
    function f16<T extends String, U extends T>(x: 'a');
    function f16<T extends String, U extends T>(x: U);
    function f16<T extends String, U extends T>(x: any) { }
    